# elliott-and-mycah

./: .babelrc  .eslintrc  .gitignore  .yarnrc.yml  BUILD.bazel  Dockerfile  README.md  WORKSPACE  WORKSPACE.bazel  auditLicenses.ts  index.html  jest.config.json  jest.config.ts  karma.conf.ts  licenses.config.cjs  licenses.config.js  nginx.conf  package-lock.json  package.json  rollup.config.js  scale_images.sh  setupTests.ts  tsconfig.json  vite.config.ts  vitest.config.ts  webpack.config.ts
.github/: dependabot.yml
.github/workflows/: main.yml  on-pull-request.yml  on-push.yml
app/: BUILD.bazel  index.html  index.ts  index.tsx  setupJest.ts  testHelpers.tsx
app/assets/: BUILD.bazel
app/assets/images/: BUILD.bazel
app/bundle/: BUILD.bazel  UserHeader.tsx  init.tsx  tsconfig.json
app/components/: About.tsx  App.test.tsx  App.tsx  AppMetricsOutlet.tsx  BUILD.bazel  Banner.tsx  Countdown.tsx  CustomComponent.tsx  Expando.tsx  Hero.tsx  Home.tsx  Menu.tsx  Modal.tsx  PartyMember.tsx  ResponsiveContainer.tsx  RsvpButton.tsx  RsvpForm.tsx  RsvpModal.tsx  ScriptTypography.tsx  ScrollToTop.tsx  ServiceWorkerRegistration.tsx  Snax.tsx  Venue.tsx  WeddingParty.tsx
app/components/About/: About.test.tsx  About.tsx  AboutSection.tsx  Banner.tsx  Section.test.tsx  Section.tsx  index.tsx
app/components/About/__snapshots__/: About.test.tsx.snap  Section.test.tsx.snap
app/components/Accommodations/: Accommodations.tsx  index.ts  index.tsx
app/components/Banner/: Banner.test.tsx  Banner.tsx
app/components/Banner/__snapshots__/: Banner.test.tsx.snap
app/components/Countdown/: Countdown.test.tsx  Countdown.tsx  index.ts  index.tsx  useCountdown.test.ts  useCountdown.ts
app/components/Countdown/__snapshots__/: Countdown.test.tsx.snap
app/components/ElmishProvider/: ElmishProvider.test.tsx  ElmishProvider.tsx  index.ts
app/components/Menu/: ActiveLink.test.tsx  ActiveLink.tsx  ListItemLink.test.tsx  ListItemLink.tsx  Menu.test.tsx  Menu.tsx  MenuOutlet.test.tsx  MenuOutlet.tsx  index.ts  index.tsx  routes.tsx  testHelpers.tsx
app/components/Menu/ActiveLink/: ActiveLink.test.tsx  ActiveLink.tsx
app/components/Menu/ActiveLink/__snapshots__/: ActiveLink.test.tsx.snap
app/components/Menu/ListItemLink/: ListItemLink.test.tsx  ListItemLink.tsx
app/components/Menu/ListItemLink/__snapshots__/: ListItemLink.test.tsx.snap
app/components/Menu/__snapshots__/: ActiveLink.test.tsx.snap  ListItemLink.test.tsx.snap  Menu.test.tsx.snap  MenuOutlet.test.tsx.snap
app/components/Pictures/: ImageRenderer.tsx  Pictures.tsx
app/components/Registry/: Registry.tsx  index.tsx
app/components/Rsvp/: GuestFields.tsx  Provider.tsx  Rsvp.tsx  RsvpButton.tsx  RsvpModal.tsx  index.ts  index.tsx
app/components/Rsvp/reducer/: actions.tsx  index.ts  index.tsx  state.ts  state.tsx  submitGuests.tsx
app/components/ScriptTypography/: ScriptTypography.test.tsx  ScriptTypography.tsx  index.test.tsx  index.ts  index.tsx
app/components/ScriptTypography/__snapshots__/: ScriptTypography.test.tsx.snap
app/components/ScrollToTop/: ScrollToTop.test.tsx  ScrollToTop.tsx
app/components/ScrollToTopOutlet/: ScrollToTopOutlet.test.tsx  ScrollToTopOutlet.tsx  index.ts
app/components/ScrollToTopOutlet/__snapshots__/: ScrollToTopOutlet.test.tsx.snap
app/components/ServiceWorker/: Register.tsx  ServiceWorker.test.tsx  ServiceWorker.tsx  Unregister.tsx  index.ts
app/components/ServiceWorker/__snapshots__/: ServiceWorker.test.tsx.snap
app/components/Venue/: index.tsx  pointsOfInterest.tsx
app/components/Wedding/: MenuOptionCard.tsx  PartyMember.tsx  Wedding.test.tsx  Wedding.tsx  index.ts  index.tsx
app/components/Wedding/__snapshots__/: Wedding.test.tsx.snap
app/components/WeddingParty/: PartyMember.tsx  index.tsx
app/components/__snapshots__/: App.test.tsx.snap
app/effects/: fromAsyncIterable.test.ts  fromAsyncIterable.test.tsx  fromAsyncIterable.ts  fromAsyncIterable.tsx  index.ts
app/hooks/: BUILD.bazel  index.ts  result.test.ts  result.ts  scrollToTop.test.ts  serviceWorker.test.ts  serviceWorker.ts  theme.test.ts  theme.ts  useAddGuest.tsx  useAddGuests.tsx  useCustomTheme.test.ts  useCustomTheme.ts  useCustomTheme.tsx  useResult.test.ts  useResult.test.tsx  useResult.ts  useResult.tsx  useScrollToTop.test.ts  useScrollToTop.ts  useServiceWorker.ts  useServiceWorker.tsx  useStaticCallback.tsx
app/hooks/__snapshots__/: theme.test.ts.snap  useCustomTheme.test.ts.snap  useCustomTheme.test.tsx.snap
app/images/headshots/: index.ts
app/images/wedding-pics/: index.ts
app/layouts/: BUILD.bazel  default.hbs
app/models/: guest.test.ts  guest.ts  guest.tsx  index.ts  state.ts  state.tsx  uuid.ts  uuid.tsx
app/reducers/: guests.tsx  submitGuests.tsx  useRsvpReducer.tsx
app/routes/: About.tsx  Pictures.tsx  Wedding.tsx
app/server/: BUILD.bazel  index.tsx  types.tsx
app/types/: BUILD.bazel  muiDefaultThemeOverride.d.ts
app/utils/: BUILD.bazel
bazel/: app_bundle.bzl
bazel/app_bundle/: index.bzl
k8s/: deployment.yml  ingress.yml  letsencrypt-prod.yml  letsencrypt-staging.yml  service.yml
types/: assets.d.ts
types/@mui/: index.d.ts
types/@mui/styles/: index.d.ts
types/generate-robotstxt/: index.d.ts
