load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//eslint:index.bzl", "eslint")

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

# sources
filegroup(
    name = "source_files",
    srcs = ["index.tsx"],
)

eslint(
    name = "eslint",
    data = [
        "//:.eslintrc",
        ":source_files",
        "@npm//:node_modules",
    ],
    args = ["**/*.tsx"],
)

ts_library(
    name = "ts_library",
    srcs = [":source_files"],
    deps = [
        "//app/server:ts_library",
        "@npm//@types/minimist",
        "@npm//@types/node",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@types/uuid",
        "@npm//minimist",
        "@npm//react",
        "@npm//react-dom",
        "@npm//uuid",
    ],
    tsconfig = "//:tsconfig.json",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "nodejs_binary",
    data = [
        ":ts_library",
        "//app/assets:webpack",
    ],
    entry_point = ":index.tsx",
    visibility = ["//visibility:public"],
)

nodejs_image(
    name = "nodejs_image",
    data = [
        ":ts_library",
        "//app/assets:webpack",
    ],
    entry_point = ":index.tsx",
    visibility = ["//visibility:public"],
)
