load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//bazel:app_bundle.bzl", "app_bundle")

ts_library(
    name = "ts_library",
    srcs = [
        "init.tsx",
    ],
    deps = [
        "//app/components:ts_library",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//react",
        "@npm//react-dom",
    ],
    tsconfig = "tsconfig.json",
    visibility = ["//visibility:public"],
)

# bundle sources go here
filegroup(
    name = "js_library",
    srcs = [
        ":ts_library",
        "//app/components:ts_library",
    ],
    output_group = "es6_sources",
)

app_bundle(
    name = "app_bundle",
    srcs = [":js_library"],
    config = "//:rollup.config.js",
    config_deps = [
        "@npm//@rollup/plugin-multi-entry",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-replace",
    ],
    deps = [
        "//:tsconfig.json",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@types/react-router-dom",
        "@npm//@material-ui/core",
        "@npm//@material-ui/icons",
        "@npm//react",
        "@npm//react-dom",
        "@npm//react-router-dom",
    ],
)
