load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//eslint:index.bzl", "eslint")

filegroup(
    name = "source_files",
    srcs = [
        "App.tsx",
        "CustomComponent.tsx",
        "Hero.tsx",
        "Menu.tsx",
        "Modal.tsx",
        "RsvpButton.tsx",
        "Snax.tsx",
        "UserHeader.tsx",
        "RsvpForm.tsx",
    ],
    visibility = ["//visibility:public"],
)

eslint(
    name = "eslint",
    data = [
        "//:.eslintrc",
        ":source_files",
        "@npm//:node_modules",
    ],
    args = ["**/*.tsx"],
)

ts_library(
    name = "ts_library",
    srcs = [":source_files"],
    deps = [
        "@npm//@material-ui/core",
        "@npm//@material-ui/icons",
        "@npm//@types/react",
        "@npm//@types/react-router-dom",
        "@npm//react",
        "@npm//react-router-dom",
    ],
    tsconfig = "//:tsconfig.json",
    visibility = ["//visibility:public"],
)