load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//eslint:index.bzl", "eslint")

filegroup(
    name = "source_files",
    srcs = glob(["*.tsx"]),
    visibility = ["//visibility:public"],
)

eslint(
    name = "eslint",
    data = [
        "//:.eslintrc",
        ":source_files",
        "@npm//:node_modules",
    ],
    args = ["**/*.tsx"],
)

ts_library(
    name = "ts_library",
    srcs = [":source_files"],
    deps = [
        "//app/hooks:ts_library",
        "//app/types:ts_library",
        "@npm//@material-ui/core",
        "@npm//@material-ui/icons",
        "@npm//@types/react",
        "@npm//@types/react-router-dom",
        "@npm//material-ui-image",
        "@npm//moment",
        "@npm//react",
        "@npm//react-router-dom",
        "@npm//react-scroll-parallax",
    ],
    visibility = ["//visibility:public"],
)