load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//eslint:index.bzl", "eslint")

filegroup(
    name = "source_files",
    srcs = [
        "index.tsx",
        "types.tsx",
    ],
    visibility = ["//visibility:public"],
)

eslint(
    name = "eslint",
    data = [
        "//:.eslintrc",
        ":source_files",
        "@npm//:node_modules",
    ],
    args = ["**/*.tsx"],
)

ts_library(
    name = "ts_library",
    srcs = [":source_files"],
    deps = [
        "@npm//@types/consolidate",
        "@npm//@types/express",
        "@npm//@types/helmet",
        "@npm//@types/node",
        "@npm//@types/pino-http",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//consolidate",
        "@npm//express",
        "@npm//handlebars",
        "@npm//helmet",
        "@npm//pino-http",
        "@npm//react",
        "@npm//react-dom",
    ],
    data = [
        "//app/layouts:source_files",
    ],
    tsconfig = "//:tsconfig.json",
    visibility = ["//visibility:public"],
)