load("@npm//@bazel/typescript:index.bzl", "ts_library")

load("@npm//eslint:index.bzl", "eslint")

filegroup(
    name = "source_files",
    srcs = ["init.tsx"],
    visibility = ["//visibility:public"],
)

eslint(
    name = "eslint",
    data = [
        "//:.eslintrc",
        ":source_files",
        "@npm//:node_modules",
    ],
    args = ["**/*.tsx"],
)

ts_library(
    name = "ts_library",
    srcs = [":source_files"],
    deps = [
        "//app/components:ts_library",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//react",
        "@npm//react-dom",
    ],
    visibility = ["//visibility:public"],
)
